--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "my portfolio",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +22,14 @@
   "bugs": {
     "url": "https://github.com/JeffrySalim/portfolio/issues"
   },
-  "homepage": "https://github.com/JeffrySalim/portfolio#readme"
+  "homepage": "https://JeffrySalim.github.io/portfolio",
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
+    "gh-pages": "^6.3.0",
+    "vite": "^7.3.0"
+  },
+  "dependencies": {
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
+  }
 }
