--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
+    "@fontsource/outfit": "^5.2.8",
+    "@fontsource/roboto": "^5.2.9",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
